tests/mytests/error/fun_error5.vsl
FUNC VOID main() {
    test
    test := 5
    RETURN test
}
